castai-mpol/add-castai-removal-disabled/.kyverno-test/exceptions.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: castai-exception-job
  namespace: policy-exceptions
spec:
  policyRefs:
  - name: add-castai-removal-disabled
    kind: MutatingPolicy
  matchConditions:
  - name: exact-resource
    expression: object.metadata.namespace == 'default' && object.metadata.name == 'exception-job'
